
 Kana no quiz - Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~

* Version 1.2 (2004-12-XX):

- The Sweedish translation has been finaly updated.


* Version 1.1 (2004-09-25):

- Doing the quiz, the same kana now won't appear twice in
a row any more. :p
- A new ``Introduction" window which briefly introduce the
Kana writing system and what this program is aimed to.
- You can now choose to get trained only upon a portion of
kana rather than the full kana set, it may be helpful for
the beginers! ^_^;


* Version 1.0 (2004-07-29):

- Addition of the ``additional" katakana question set which
contains syllabes used for foreign words.
The sets are now: ``Basic" (formerly ``Single"), ``Modified",
``Contracted" (formerly ``Combined") & ``Additional" (for
katakana only). In other words: *ALL* kana have been (normally ;)
implemented into Kana no quiz. ^_^
- The answers can now be typed directly through a text entry
rather than selected from a list. It's harder! ^^;
- The option panel has been slighty redesigned.
- Program translation into Portuguese of Brazil.
Unfortunately, the Sweedish translation has not been updated. ;( 


* Version 0.9 (2004-05-31):

- New combined hiragana & katakana added.
- Questions are now divided in several sets (single/modified
/combined).
- At least one question set must be selected or a dialog will
warn you. :p
- Update of translations.


* Version 0.8 (2004-05-08):

- Forty-one kana added (total: 142). All the basic
syllables of both the katakana & hiragana syllabaries
are now implemented. :)


* Version 0.7 (2004-04-17):

- Forty-five new kana added (total: 101).
- Many previous kana have been enhanced!


* Version 0.6 (2004-04-03):

- Huge improvements of Tkinter interface (Windows)!
- Thirteen new kana added (total: 66).
- Better handling of the configuration file.
- Program language can be now changed on the fly from the
configuration panel.
- Bug fix: first param appeared as a comment in the
configuration file.